Fix horizontal scroll from hidden cart-dropdown

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -2,7 +2,7 @@
   position: absolute;
   z-index: -1;
   visibility: hidden;
-  right: -100%;
+  right: 0;
   top: calc(100% + 10px);
   border: 1px solid #000;
   background-color: #fff;
